<resources>
    <string name="app_name">FitAppka</string>
    <string name="create_account">Utwórz konto</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="confirm_password">Potwierdź hasło</string>
    <string name="or">lub</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="sign_in_with_google">Zaloguj się przez Google</string>
    <string name="you_are_signed_in">Jesteś zalogowany</string>
    <string name="sign_out">Wyloguj się</string>
    <string name="error_occurred">Wystąpił błąd</string>
    <string name="logged_in">Zalogowano</string>
    <string name="logged_out">Wylogowano</string>
    <string name="field_is_required">Pole <b>%s</b> jest wymagane</string>
    <string name="passwords_are_different">Podane hasła są różne</string>
    <string name="created_account">Utworzono konto</string>
    <string name="mail_sent_to">Wysłano e-mail na adres: <i>%s</i></string>
    <string name="test_database">Testowa baza danych</string>
    <string name="error_connecting_to_db">Wystąpił błąd: %s</string>
    <string name="edit">Edytuj</string>
    <string name="cancel">Anuluj</string>
    <string name="delete">Usuń</string>
    <string name="save">Zapisz</string>
    <string name="add">Dodaj</string>
    <string name="name">Nazwa</string>
    <string name="copy">Kopiuj</string>
    <string name="exercise_no_capitalize">ćwiczenie</string>
    <string name="delete_exercise">Usuń ćwiczenie</string>
    <string name="edit_exercise">Edytuj ćwiczenie</string>
    <string name="add_exercise">Dodaj ćwiczenie</string>
    <string name="next_training">Następny trening</string>
    <string name="prev_training">Poprzedni trening</string>
    <string name="add_training">Dodaj trening</string>
    <string name="delete_training">Usuń trening</string>
    <string name="add_series">Dodaj serię</string>
    <string name="loading_database">Ładowanie bazy danych…</string>
    <string name="back_to_menu">Wróć do menu</string>
    <string name="name_of_exercise">Nazwa ćwiczenia</string>
    <string name="choose_muscle_part">Wybierz partię mięśniową</string>
    <string name="choose_muscle_part_and_exercise">Wybierz partię mięśniową i ćwiczenie</string>
    <string name="choose_properties">Wybierz sposoby pomiaru ćwiczenia</string>
    <string name="create_exercise">Stwórz ćwiczenie</string>
    <string name="choose_exercise">Wybierz ćwiczenie</string>
    <string name="exercise_already_reported">
        To ćwiczenie jest już zaraportowane.\nMożna jedynie zmienić nazwę
    </string>
    <string name="continue_without_log_in">Kontynuuj bez logowania</string>
    <string name="create_exercises">Dodaj ćwiczenia</string>
    <string name="edit_exercises">Edytuj ćwiczenia</string>
    <string name="show_trainings">Przegląd treningów</string>
    <string name="trainings_summary">Podsumowanie treningów</string>
    <string name="exercise_summary">Podsumowanie ćwiczenia</string>

    <!-- Muscle parts -->
    <string name="chest">Klatka piersiowa</string>
    <string name="arms">Ręce</string>
    <string name="back">Plecy</string>
    <string name="shoulders">Ramiona</string>
    <string name="abdominals">Brzuch</string>
    <string name="legs">Nogi</string>

    <!-- Exercises properties -->
    <string name="series_val">Serie: %d</string>
    <string name="reps_val">Powtórzenia: %d</string>
    <string name="weight_val">Ciężar: %.2f</string>
    <string name="distance_val">Dystans: %.2f</string>
    <string name="duration_val">Czas: %.2f</string>

    <string name="series">Seria:</string>
    <string name="reps">Powtórzenia:</string>
    <string name="weight">Ciężar:</string>
    <string name="distance">Dystans:</string>
    <string name="duration">Czas:</string>

    <!-- Training summary -->
    <string name="total_weight">Całkowity ciężar</string>
    <string name="total_distance">Całkowity dystans</string>
    <string name="total_duration">Całkowity czas</string>
    <string name="average_speed">Średnia prędkość (km/h)</string>
    <string name="add_series_1">Dodaj</string>
    <string name="add_series_2"> serię</string>

    <!-- Date ranges -->
    <string name="choose_date_range">Wybierz zakres dat</string>
    <string name="last_7_days">Ostatnie 7 dni</string>
    <string name="last_30_days">Ostatnie 30 dni</string>
    <string name="last_90_days">Ostatnie 90 dni</string>
    <string name="last_year">Ostatni rok</string>
</resources>